[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "Neural_Decoding"
dynamic = ["version"] # Add this line
dependencies = [
    "numpy >= 1.16.3",
]

[project.optional-dependencies]
full = [
    "keras >= 3.1.1",
    "xgboost >= 3.0.5",
    "scikit-learn >= 1.3.0",
    "bayesian-optimization >= 3.1.0"
]

keras = [
    "keras >= 3.1.1",
]

xgboost = [
    "xgboost >= 3.0.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools-git-versioning]
enabled = true

[tool.flake8]
# Rule definitions: http://flake8.pycqa.org/en/latest/user/error-codes.html
# D203: 1 blank line required before class docstring
# W503: line break before binary operator
exclude = ['venv*','__pycache__','node_modules','bower_components','migrations']
ignore = ['D203', 'W503']
max-complexity = 9
max-line-length = 88
extend-ignore = ['E203']
per-file-ignores = ['src/__init__.py:F401']